--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
   <section class="header">
     <nav>
       <div class="logo">
-        <img src="images/logo11.jpg" alt="Image not found" />
+        <img src="Images/logo11.jpg" alt="Image not found" />
       </div>
       <div class="links">
         <ul>
