--- a/Home.html
+++ b/Home.html
@@ -71,17 +71,17 @@
       <!--Row 1-->
       <div class="row">
         <div class="col">
-          <img src="images/Bracelet.jpg" alt="Image not found" />
+          <img src="Images/Bracelet.jpg" alt="Image not found" />
           <h3>Bracelet 1</h3>
           <p>40,000 L.L </p>
         </div>
         <div class="col">
-          <img src="images/Bracelet2.jpg" alt="Image not found" />
+          <img src="Images/Bracelet2.jpg" alt="Image not found" />
           <h3>Bracelet 2</h3>
           <p>35,000 L.L</p>
         </div>
         <div class="col">
-          <img src="images/Bracelet3.jpg" alt="Image not found" />
+          <img src="Images/Bracelet3.jpg" alt="Image not found" />
           <h3>Bracelet 3</h3>
           <p>45,000 L.L</p>
         </div>
@@ -90,17 +90,17 @@
       <!--Row 2-->
       <div class="row">
         <div class="col">
-          <img src="images/Bracelet4.jpg" alt="Image not found" />
+          <img src="Images/Bracelet4.jpg" alt="Image not found" />
           <h3>Bracelet 4</h3>
           <p>40,000 L.L</p>
         </div>
         <div class="col">
-          <img src="images/Bracelet5.jpg" alt="Image not found" />
+          <img src="Images/Bracelet5.jpg" alt="Image not found" />
           <h3>Bracelet 5</h3>
           <p>55,000 L.L</p>
         </div>
         <div class="col">
-          <img src="images/image0.jpeg" alt="Image not found" />
+          <img src="Images/image0.jpeg" alt="Image not found" />
           <h3>Bracelet 6</h3>
           <p>40,000 L.L</p>
         </div>
@@ -108,34 +108,34 @@
       <h1>Necklaces</h1>
       <div class="row">
         <div class="col">
-          <img src="images/Necklace.jpg" alt="Image not found" />
+          <img src="Images/Necklace.jpg" alt="Image not found" />
           <h3>Necklace 1</h3>
           <p>60,000 L.L</p>
         </div>
         <div class="col">
-          <img src="images/Necklace2.jpg" alt="Image not found" />
+          <img src="Images/Necklace2.jpg" alt="Image not found" />
           <h3>Necklace 2</h3>
           <p>65,000 L.L</p>
         </div>
         <div class="col">
-          <img src="images/Necklace3.jpg" alt="Image not found" />
+          <img src="Images/Necklace3.jpg" alt="Image not found" />
           <h3>Necklace 3</h3>
           <p>100,000 L.L</p>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <img src="images/image2.jpeg" alt="Image not found" />
+          <img src="Images/image2.jpeg" alt="Image not found" />
           <h3>Necklace 4</h3>
           <p>60,000 L.L</p>
         </div>
         <div class="col">
-          <img src="images/image3.jpeg" alt="Image not found" />
+          <img src="Images/image3.jpeg" alt="Image not found" />
           <h3>Necklace 5</h3>
           <p>65,000 L.L</p>
         </div>
         <div class="col">
-          <img src="images/image4.jpeg" alt="Image not found" />
+          <img src="Images/image4.jpeg" alt="Image not found" />
           <h3>Necklace 6</h3>
           <p>100,000 L.L</p>
         </div>
