--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 <section class="header">
   <nav>
     <div class="logo">
-      <img src="images/logo11.jpg" alt="Image not found" />
+      <img src="Images/logo11.jpg" alt="Image not found" />
     </div>
 
     <div class="links">
