--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="keywords" content="bracelets, necklaces, ngdesigns, ngdesignslb" />
-  <meta name="description" content="..." />
+  <meta name="description" content="Handmade bracelets, necklaces and more..." />
   <link rel="stylesheet" href="CSS/style.css" type="text/css" />
   <script src="https://kit.fontawesome.com/3bea7145b2.js" crossorigin="anonymous"></script>
   <link rel="apple-touch-icon" sizes="57x57" href="Icons/apple-icon-57x57.png">
