--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
     <div class="links">
       <ul>
-        <li><a href="/NGDesigns/home.html">HOME </a></li>
+        <li><a href="/NGDesigns/Home.html">HOME </a></li>
         <li><a href="/NGDesigns/about.html">ABOUT </a></li>
         <li><a href="/NGDesigns/contact.html">CONTACT</a></li>
       </ul>
